# StayOnTop

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: highlight.rs  image_window.rs  mod.rs  pinned.rs  process.rs  settings.rs  window.rs
src/lib/: types.ts
src/lib/components/: Badge.svelte  Button.svelte  Checkbox.svelte  ImageItem.svelte  Input.svelte  PinnedWindowItem.svelte  ProcessItem.svelte  Select.svelte  Slider.svelte  StatusBar.svelte  TitleBar.svelte  index.ts
src/lib/i18n/: en.ts  es.ts  index.ts  pt-br.ts
src/lib/services/: hotkey.service.ts  image.service.ts  process.service.ts  settings.service.ts  window.service.ts
src/lib/stores/: images.store.ts  pinned.store.ts  processes.store.ts  settings.store.ts  update.store.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/images/: +page.svelte
src/routes/settings/: +page.svelte
src/styles/: _mixins.scss  _reset.scss  _variables.scss  main.scss
src/styles/components/: _badge.scss  _button.scss  _checkbox.scss  _input.scss  _select.scss  _slider.scss  _statusbar.scss  _titlebar.scss
src/styles/views/: _home.scss  _images.scss  _layout.scss  _settings.scss
